# spoolbuddy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLORS.md  CONTRIBUTING.md  Cargo.toml  DOCKERHUB.md  README.md  SECURITY.md  SPOOLBUDDY_PLAN.md  release-firmware.sh  test_backend.sh  test_docker.sh  test_frontend.sh  test_security.sh
.github/workflows/: ci.yml  codeql.yml  issue-closed.yml  security.yml  stale.yml
backend/: main.py  models.py  requirements.txt
backend/api/: __init__.py  cloud.py  colors.py  firmware.py  printers.py  settings.py  tags.py
backend/db/: database.py
backend/mqtt/: client.py
backend/services/: bambu_cloud.py
backend/tags/: __init__.py  decoder.py  models.py  openspool.py  opentag3d.py
backend/tests/unit/: test_auto_connect.py  (+1 more)
eez/: spoolbuddy.eez-project
firmware/: Cargo.toml  README.md  UI_DESIGN.md  build.rs  sdkconfig.defaults  update_eez_screens.sh
firmware/.cargo/: config.toml
firmware/assets/: README.md
firmware/components/: lv_conf.h
firmware/components/display_driver/: CMakeLists.txt  display_driver.c  display_driver.h
firmware/components/eez_ui/: CMakeLists.txt  actions.c  images.c  images.h  screens.h  ui.c  ui_backend.c  ui_hardware.c  ui_image_ams_setup.c  ui_image_back.c  ui_image_bell.c  ui_image_dot.c  ui_image_encoding.c  ui_image_filament_load_o_series.c  ui_image_humidity.c  ui_image_setting_preview.c  ui_image_signal.c  ui_image_spool_frame.c  ui_image_weight_preview.c  ui_internal.h  ui_nfc.c  ui_nfc_card.c  ui_nfc_card.h  ui_scale.c  ui_scan_result.c  ui_wifi.c
firmware/lvgl-configs/: lv_conf.h
firmware/simulator/: Cargo.toml
firmware/simulator/.cargo/: config.toml
firmware/src/: backend_client.rs  main.rs  nfc_bridge_manager.rs
firmware/src/nfc/: i2c_bridge.rs
firmware/src/ui/: display.rs  theme.rs
firmware/src/ui/widgets/: ams_view.rs  button.rs  mod.rs
firmware/ui-mockup/: index.html  package.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
lvgl-simulator/: Cargo.toml  build.rs  convert_bell.py  convert_encode.py  convert_logo.py  convert_nfc.py  convert_power.py  convert_setting.py  convert_weight.py
lvgl-simulator-sdl/: CMakeLists.txt  WORKFLOW.md  backend_client.c  backend_client.h  lv_conf.h  main.c  sim_control.h  sync_and_build.sh
lvgl-simulator-sdl/ui/: images.c  images.h  screens.c  screens.h  ui.c  ui_backend.c  ui_image_3d_cube.c  ui_image_about.c  ui_image_add.c  ui_image_ams.c  ui_image_amssetup.c  ui_image_bell_preview.c  ui_image_calibrate.c  ui_image_catalog.c  ui_image_display.c  ui_image_dot.c  ui_image_fd_calibration_auto_n7.c  ui_image_firmware.c  ui_image_humidity_mockup.c  ui_image_logo_28x28_preview.c  ui_image_monitor_extruder_empty_load.c  ui_image_monitor_extruder_empty_unload.c  ui_image_mqtt.c  ui_image_nfc.c  ui_image_ok.c  ui_image_power_preview.c  ui_image_reset.c  ui_image_scale.c  ui_image_scale_2.c  ui_image_settings.c  ui_image_spool_base.c  ui_image_spool_clean.c  ui_image_spool_fill.c  ui_image_spool_mask.c  ui_image_spoolbuddy_logo_transparent.c  ui_image_temp_mockup.c  ui_image_temperature.c  ui_image_thermometer.c  ui_image_update.c  ui_image_wifi_signal_1.c  (+13 more)
lvgl-simulator/include/: lv_conf.h  lv_drv_conf.h
lvgl-simulator/src/: main.rs
lvgl-simulator/src/ui/: images.c  images.h  screens.c  screens.h  ui_image_ams_setup.c  ui_image_catalog.c  ui_image_encode_preview.c  ui_image_encoding.c  ui_image_filament_spool.c  ui_image_humidity.c  ui_image_humidity_mockup.c  ui_image_logo_28x28_preview.c  ui_image_nfc.c  ui_image_nfc_preview.c  ui_image_power_preview.c  ui_image_setting_preview.c  ui_image_settings.c  ui_image_signal.c  ui_image_spool_base.c  ui_image_spool_clean.c  ui_image_spool_fill.c  ui_image_spool_frame.c  ui_image_spool_mask.c  ui_image_spoolbuddy_logo_light.c  ui_image_temp_mockup.c  ui_image_temperature.c  ui_image_weight_preview.c
lvgl-simulator/tools/: create_icons.py  create_mockup_icons.py  create_spool_asset.py  svg_to_lvgl.py
server/: Cargo.toml
server/src/: config.rs  main.rs  printer_manager.rs
server/src/api/: discovery.rs  mod.rs  printers.rs
server/src/db/: mod.rs  schema.rs
server/src/discovery/: mod.rs  ssdp.rs
server/src/mqtt/: bambu_api.rs  client.rs  mod.rs
spoolease_sources/: SPOOLBUDDY_PLAN.md
(+25 files in other folders)
