[package]
name = "spoolbuddy-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# ESP32-S3 HAL (for Waveshare ESP32-S3-Touch-LCD-4.3)
esp-hal = { version = "1.0", features = ["esp32s3", "log-04", "unstable", "psram"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16", features = ["esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3", "log-04"] }

# Logging
log = "0.4"

# Graphics
embedded-graphics = "0.8"

# Memory allocation (for PSRAM framebuffer)
esp-alloc = "0.7"

# Utilities
critical-section = "1.1"

[features]
default = []

[profile.release]
opt-level = "s"
lto = false

[profile.dev]
opt-level = 1
