[package]
name = "spoolbuddy-lvgl-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# LVGL with driver support for SDL
lvgl = { version = "0.6.2", default-features = false, features = [
    "alloc",
    "unsafe_no_autoinit",
    "drivers",
] }
lvgl-sys = { version = "0.6.2" }

# C String interop (same as firmware)
cstr_core = "0.2.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Build dependencies for compiling EEZ C code
[build-dependencies]
cc = "1.0"
glob = "0.3"

# Use the same patched lvgl as firmware for compatibility
[patch.crates-io]
lvgl = { git = "https://github.com/enelson1001/lv_binding_rust" }
lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust" }
