[package]
name = "spoolbuddy-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
rumqttc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# TLS for MQTT (version must match rumqttc's tokio-rustls dependency)
rustls = { version = "0.22.4", features = ["ring"] }
rustls-pki-types = "1"

# SSDP discovery
socket2 = "0.5"

# Error handling
anyhow = "1"
