[package]
name = "spoolbuddy-simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Desktop GUI simulator for SpoolBuddy - generates PNG screenshots"
default-run = "spoolbuddy-simulator"

[[bin]]
name = "spoolbuddy-simulator"
path = "src/main.rs"

[[bin]]
name = "test_minimal"
path = "src/test_minimal.rs"

[[bin]]
name = "convert_svg"
path = "src/convert_svg.rs"

[dependencies]
embedded-graphics = "0.8"
image = "0.25"
resvg = "0.44"
tiny-skia = "0.11"
tinybmp = "0.6"

